Fix gradient clipping and reposition higher
- Expanded filter region (x/y: -100%, width/height: 300%) so blur isn't clipped
- Added overflow: visible to SVG and blobs so animated blobs don't get cut by frame
- Clustered blobs more centrally in viewBox to avoid edge clipping during float
- Repositioned higher (top: -180px) and further right (right: -450px)

Fixes the issue where animation disappeared/clipped after a few seconds.

--- a/css/style.css
+++ b/css/style.css
@@ -141,12 +141,17 @@ a {
 
 .intro__gradient {
   position: absolute;
-  top: -150px;
-  right: -400px;
+  top: -180px;
+  right: -450px;
   width: 700px;
   height: 700px;
   pointer-events: none;
+  overflow: visible;
   display: none;
+}
+
+.intro__gradient .blob {
+  overflow: visible;
 }
 
 .blob {
